--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,14 @@ constantly==23.10.4
 cryptography==45.0.5
 daphne==4.2.1
 decorator==5.2.1
+dj-database-url==3.0.1
 Django==5.2.4
 django-environ==0.12.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 exceptiongroup==1.3.0
 executing==2.2.0
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -61,4 +63,5 @@ typing_extensions==4.14.0
 tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.9.0
 zope.interface==7.2
